--- a/landing-page/assets/css/style.css
+++ b/landing-page/assets/css/style.css
@@ -80,7 +80,7 @@ color: #FFF;
   
     padding-top: 10px;
     padding-bottom: 60px;
-    background: url(../img/head.jpg) no-repeat center center;
+    background: url(../img/banner.jpg) no-repeat center center;
 padding: 0;
 -webkit-background-size: cover;
 background-size: cover;
